# calibre-tracker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py
app/auth/: __init__.py  cwa_bridge.py  routes.py
app/calibre/: __init__.py  models.py  repository.py
app/static/css/: tracker.css
app/static/js/: tracker.js
app/templates/: base.html  layout.html
app/templates/components/: book_card.html  progress_bar.html  rating_stars.html  sidebar.html
app/templates/tracker/: book_detail.html  book_edit.html  dashboard.html  note_edit.html  quote_edit.html  quotes.html  search.html  shelf_detail.html  shelf_edit.html  shelf_order.html  shelves.html  shelves_reorder.html  status_list.html
app/tracker/: __init__.py  models.py  nav.py  routes.py  service.py
cwa-override/: README.md
cwa-override/templates/: layout.html
docs/: 01-data-model.md  02-docker-architecture.md  03-auth-and-theming.md  04-implementation-plan.md  05-styling-caliblur-shell.md  06-phase-8-checkpoint.md
migrations/versions/: 6a8b4ac91bd6_initial_schema.py
tests/: conftest.py  test_auth_bridge.py  test_calibre_repository.py  test_cookie_isolation.py  test_dashboard.py  test_quotes_notes.py  test_reading_log.py  test_shelves.py  test_theming.py  test_tracker_models.py
tests/fixtures/: build_cwa_fixture.py  build_metadata_fixture.py
tests/fixtures/calibre-library/: metadata.db
tests/fixtures/cwa/: app.db
